white space in scrolling y axis fixed

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,17 @@
 .active{
   color: rgb(8, 136, 240);;
 }
+html{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+ 
+
+}
+body{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  
+}
